source/_assets/sass/_related.scss
// This is meant to apply to "related items" sections,
//   i.e. resources, events, and shop

section.related {

	position: relative;

	padding-bottom: 2em;

	@media #{$mq-medium} {
		padding-top: 2em;
	}

	.container {

		@media #{$mq-medium} {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
		}

	}

	.title {

		flex-grow: 1;

		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
		align-items: center;

		h2 {
			color: $color-blue;
			font-size: 2em;
			line-height: 1;
			padding: 1em 0;
		}

		@media #{$mq-medium} {
			display: block;
			margin-right: 2em;
		}

	}

	.wrapper {

		flex-grow: 3;

		display: flex;
		flex-wrap: wrap;

		margin: -#{$mg-smallest};

		@media #{$mq-medium} {
			margin: -1em;
		}

		.related-item {

			padding: $mg-smallest;

			@media #{$mq-medium} {
				padding: 1em;
			}

			width: 50%;

			@media #{$mq-small} {
				width: percentage(1/3);
			}

			@media #{$mq-smallish} {
				width: percentage(1/4);
			}

			@media #{$mq-medium} {
				width: percentage(1/3);
			}

			@media #{$mq-large} {
				width: percentage(1/4);
			}

		}


	}
}

